--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -7,5 +7,10 @@ body {
 }
 .container {
   max-width: 1000px;
-  margin: 30px auto 30px;  
+  margin: 30px auto 30px;
+  box-sizing: border-box;
+}
+
+html, body {
+  overflow-x: hidden;
 }
